##
## File:        Makefile.am
## Package:     Babel Examples
## Copyright:   (c) 2001 Lawrence Livermore National Security, LLC
## Revision:    $Revision$
## Modified:    $Date$
## Description: automake makefile for cca example
##

AUTOMAKE_OPTIONS = foreign no-dependencies no-installinfo no-installman \
                   no-texinfo.tex 1.7

SUBDIRS    = repository libdecaf hello-server hello-client runCxx runF77 runF90 runJava runPython 
EXTRA_DIST = cca.sidl strop.sidl README
