##
## File:        Makefile.am
## Package:     Babel Examples
## Copyright:   (c) 2001 Lawrence Livermore National Security, LLC
## Revision:    $Revision$
## Modified:    $Date$
## Description: automake makefile for hello world example
##

AUTOMAKE_OPTIONS = foreign no-dependencies no-installinfo	\
                   no-installman no-texinfo.tex 1.7

#libUCxx
SUBDIRS =  libC libCxx libF77 libJava libPython runC runCxx runF77 \
	   runJava runPython

EXTRA_DIST = Hello.sidl README
